GNOME Bugzilla – Bug 708880
rtspconnection: Not connecting to proxy when specified
Last modified: 2013-10-04 05:34:34 UTC
If the GstConnectionInfo contains proxy information we should not try to connect to uri we get conn->url. The connection should be made to the proxy. This was broken by commit a42a7be5df7adc33bdf0f5d0f75b2ed5ed16b7ad I have attached a fix.
Created attachment 255888 [details] [review] fix
Created attachment 256134 [details] [review] patch
The new patch contains coding convention fixes only. I'll be more than happy to supply more information or to change the fix if you deem it required
I was of the impression that the SocketClient took care of any global proxy settings etc. Also connecting to the proxy is not enough? you need to specify the target host in the header etc.
I'm using the rtspsrc (rtsp over http) to fetch an h264 stream through through. Pipeline: rtspsrc proxy=192.168.0.1:3128 location="rtsph://00408c1837c4/axis-media/media.amp" ! rtph264depay ! h264parse ! fakesink location=out.mp4 That pipeline works in 1.0 but not 1.2. Gst 1.2 gives me the following out put: [snip] Setting pipeline to PAUSED ... Pipeline is live and does not need PREROLL ... Progress: (open) Opening Stream Progress: (connect) Connecting to rtsph://00408c1837c4/axis-media/media.amp 0:00:00.034235076 28208 0xfccde0 ERROR default gstrtspconnection.c:688:gst_rtsp_connection_connect: failed to connect: Error resolving '00408c1837c4': Name or service not known 0:00:00.034285510 28208 0xfccde0 ERROR rtspsrc gstrtspsrc.c:3697:gst_rtsp_conninfo_connect:<rtspsrc0> Could not connect to server. (Generic error) ERROR: from element /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0: Could not open resource for reading and writing. Additional debug info: gstrtspsrc.c(6168): gst_rtspsrc_retrieve_sdp (): /GstPipeline:pipeline0/GstRTSPSrc:rtspsrc0: Failed to connect. (Generic error) ERROR: pipeline doesn't want to preroll. Setting pipeline to PAUSED ... Setting pipeline to READY ... Setting pipeline to NULL ... Freeing pipeline ... [/snip] I have tried to set the environment variable http_proxy in front of my gst-launch and it dose not work either.
My last post had a bad case of early morning. The first part of the comment should be: I'm using the rtspsrc (rtsp over http) to fetch an h264 stream through proxy. Pipeline: rtspsrc proxy=192.168.0.1:3128 location="rtsph://00408c1837c4/axis-media/media.amp" ! rtph264depay ! h264parse ! mp4mux ! filesink location=out.mp4
commit 6bb58eec8a9b3caa7cb88ab7c2a16032bf2cf396 Author: Hans Månsson <hansm@axis.com> Date: Mon Sep 30 21:46:10 2013 +0200 rtspconnection: Connect to proxy if specified Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708880