rtspconnection: Connect to proxy if specified

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708880